fix width horizontal scrollbar

--- a/src/root.css
+++ b/src/root.css
@@ -19,8 +19,8 @@
 
 
 /* width */
-::-webkit-scrollbar {
-  @apply w-2;
+::-webkit-scrollbar{
+  @apply w-2 h-2;
 }
 
 /* Handle */
